--- a/main.html
+++ b/main.html
@@ -8,6 +8,49 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+    <main>
+        <table>
+            <thead>
+                <tr>
+                    <th>Roll Numbers</th>
+                    <th>Names</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Rahul</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Shubham</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Sundram</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>List of medias</h2>
+
+        <ol>
+            <li>
+                <img src="https://picsum.photos/id/123/200/300" alt="Image of water drops on something">
+            </li>
+            <li>
+                <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>
+                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+                </video>
+            </li>
+            <li>
+                <audio controls>
+                    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+                </audio>
+            </li>
+        </ol>
+    </main>
     <script type="text/javascript" src="./script.js">
 </script>
 
