--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
                 </video>
             </li>
             <li>
-                <audio controls>
+                <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
                     <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
                 </audio>
             </li>
